Fix banner alignment

--- a/mia/www/static/style.css
+++ b/mia/www/static/style.css
@@ -34,9 +34,8 @@ main {
 
 .banner {
     width: 100%;
-    padding: 4px;
+    padding: 16px;
 }
-
 .banner.error {
     background-color: var(--colour-error);
     color: var(--colour-error-text);
@@ -63,6 +62,10 @@ main {
 }
 .flex-shrink {
     flex: 0 1 auto;
+}
+
+.flex-center {
+    align-self: center;
 }
 
 input, button {
